--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeActivity">
+    tools:context=".activities.HomeActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolBarHomeActivity"
@@ -21,10 +21,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Home"
-                android:textSize="22sp"
+                android:textAllCaps="true"
+                android:textSize="16sp"
                 android:textColor="@color/colorWhite"
                 android:layout_centerInParent="true"
-                android:paddingRight="40dp" />
+                android:paddingRight="60dp" />
 
             <ImageView
                 android:id="@+id/imageViewHomeActivitySearch"
@@ -33,6 +34,7 @@
                 android:src="@drawable/ic_round_search_24"
                 android:layout_alignParentRight="true"
                 android:layout_marginEnd="18dp"
+                android:clickable="true"
                 android:layout_toLeftOf="@id/textViewHomeActivityHome" />
         </RelativeLayout>
     </androidx.appcompat.widget.Toolbar>
