--- a/app/src/main/res/layout/activity_post_details.xml
+++ b/app/src/main/res/layout/activity_post_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PostDetailsActivity">
+    tools:context=".activities.PostDetailsActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolBarPostDetailsActivity"
@@ -17,7 +17,9 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+
+            >
 
             <ImageView
                 android:id="@+id/imageViewPostDetailsActivityBack"
