--- a/app/src/main/res/layout/layout_inside_view_pager.xml
+++ b/app/src/main/res/layout/layout_inside_view_pager.xml
@@ -1,13 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="250dp">
 
     <ImageView
-        android:id="@+id/imageViewInSideViewPager"
+        android:id="@+id/imageViewLayoutInsideViewPagerThumbNail"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
         android:scaleType="fitXY"
-        android:layout_alignParentTop="true" />
+        android:src="@drawable/news_image" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/img_gradient"
+
+        />
+
+    <TextView
+        android:id="@+id/textViewLayoutInsideViewPagerPostTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginBottom="30dp"
+        android:gravity="start"
+        android:text="Coal Mine acciednt in China's Chongging kills 18"
+        android:textAlignment="gravity"
+        android:textColor="@color/colorWhite"
+        android:textSize="19sp"
+        android:textStyle="bold" />
+
+
+    <TextView
+        android:id="@+id/textViewLayoutInsideViePagerPostTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginBottom="10dp"
+        android:text="UPDATED  an hour ago"
+        android:textColor="@color/colorWhite"
+        android:textSize="10dp" />
+
 
 </RelativeLayout>
