--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,12 +13,15 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentLeft="true" />
 
+
     <ProgressBar
         android:id="@+id/progressBarHomeFragment"
         style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
+        android:layout_width="40dp"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:indeterminateTint="@color/colorPrimaryDark"
         android:visibility="gone" />
 
 </RelativeLayout>
