--- a/app/src/main/res/layout/layout_custom_settings_grid_view.xml
+++ b/app/src/main/res/layout/layout_custom_settings_grid_view.xml
@@ -7,7 +7,7 @@
         android:id="@+id/textViewCustomSettingsGridViewSettingName"
         android:layout_width="100dp"
         android:layout_height="25dp"
-        android:text="@string/top"
+        android:text="top"
         android:textAlignment="textStart"
         android:textAllCaps="true"
         android:textSize="12sp"
